--- a/src/format.tex
+++ b/src/format.tex
@@ -42,6 +42,8 @@
   breaklines = true,
   breakindent = 1.1em,
 %  numbers=right,
+  aboveskip=2pt,  % 设置代码框上方的间距
+  belowskip=2pt,  % 设置代码框下方的间距
   stringstyle=\monotype,
   numberstyle=\footnotesize\ttfamily,
   firstnumber=last,
